--- a/sources.bib
+++ b/sources.bib
@@ -129,7 +129,7 @@
   title={The Reactive Manifesto},
   url={https://www.reactivemanifesto.org/},
   month = sep,
-  lastaccessed = {April 17, 2018}
+  lastaccessed = {April 17, 2018},
 }
 
 @inproceedings{Salvaneschi:2015,
@@ -145,4 +145,18 @@
  acmid = {2819226},
  publisher = {IEEE Press},
  address = {Piscataway, NJ, USA},
-} 
+}
+
+@ARTICLE{:2017,
+  author={G. Salvaneschi and S. Proksch and S. Amann and S. Nadi and M. Mezini},
+  journal={IEEE Transactions on Software Engineering},
+  title={On the Positive Effect of Reactive Programming on Software Comprehension: An Empirical Study},
+  year={2017},
+  volume={43},
+  number={12},
+  pages={1125-1143},
+  keywords={functional languages;object-oriented languages;object-oriented programming;functional languages;object-oriented languages;observer design pattern;program comprehension;reactive languages;reactive programming;software comprehension;Programming;Robot sensing systems;Runtime;Software development;Reactive programming;controlled experiment;empirical study;software comprehension},
+  doi={10.1109/TSE.2017.2655524},
+  ISSN={0098-5589},
+  month={Dec},
+  }
