--- a/sources.bib
+++ b/sources.bib
@@ -147,7 +147,7 @@
  address = {Piscataway, NJ, USA},
 }
 
-@ARTICLE{:2017,
+@ARTICLE{Salvaneschi:2017,
   author={G. Salvaneschi and S. Proksch and S. Amann and S. Nadi and M. Mezini},
   journal={IEEE Transactions on Software Engineering},
   title={On the Positive Effect of Reactive Programming on Software Comprehension: An Empirical Study},
