--- a/sources.bib
+++ b/sources.bib
@@ -132,6 +132,13 @@
   lastaccessed = {April 17, 2018},
 }
 
+@online{reactiveStreams,
+  year= {2017},
+  title={Reactive Streams},
+  url={http://www.reactive-streams.org/},
+  lastaccessed = {April 17, 2018},
+}
+
 @inproceedings{Salvaneschi:2015,
  author = {Salvaneschi, Guido and Margara, Alessandro and Tamburrelli, Giordano},
  title = {Reactive Programming: A Walkthrough},
@@ -174,3 +181,28 @@
   url={https://projectreactor.io/},
   lastaccessed = {April 17, 2018},
 }
+
+@article{coplien1995reactor,
+  title={Reactor-an object behavioral pattern for demultiplexing and dispatching handles for synchronous events},
+  author={Coplien, Edited Jim and Schmidt, Douglas C},
+  year={1995},
+  publisher={Citeseer}
+}
+
+@inproceedings{Salvaneschi:2014,
+ author = {Salvaneschi, Guido and Hintz, Gerold and Mezini, Mira},
+ title = {REScala: Bridging Between Object-oriented and Functional Style in Reactive Applications},
+ booktitle = {Proceedings of the 13th International Conference on Modularity},
+ series = {MODULARITY '14},
+ year = {2014},
+ isbn = {978-1-4503-2772-5},
+ location = {Lugano, Switzerland},
+ pages = {25--36},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/2577080.2577083},
+ doi = {10.1145/2577080.2577083},
+ acmid = {2577083},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {event-driven programming, functional-reactive programming, scala},
+} 
