section evolution finished

--- a/sources.bib
+++ b/sources.bib
@@ -168,7 +168,7 @@
   month={Dec},
   }
 
-  @online{reactiveX:2018,
+@online{reactiveX:2018,
   year= {2018},
   title={ReactiveX},
   url={http://reactivex.io/},
@@ -179,6 +179,21 @@
   year= {2017},
   title={Project Reactor},
   url={https://projectreactor.io/},
+  lastaccessed = {April 17, 2018},
+}
+
+@online{akka:2018,
+  year= {2018},
+  title={Akka},
+  url={https://akka.io/},
+  lastaccessed = {April 17, 2018},
+}
+
+@article{javaflow2018,
+  title={Java 9: Flow AP},
+  author={Oracle},
+  year={2018},
+  url={https://docs.oracle.com/javase/9/docs/api/java/util/concurrent/Flow.html},
   lastaccessed = {April 17, 2018},
 }
 
